--- a/JosephProblemDataGenerator/JosephProblemDataGenerator.vcxproj
+++ b/JosephProblemDataGenerator/JosephProblemDataGenerator.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{9D605062-BC1C-4E68-A674-1D4832E706D7}</ProjectGuid>
     <RootNamespace>JosephProblemDataGenerator</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>JosephDataGenerator</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -115,7 +116,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="JosephProblemDataGenerator.cpp" />
+    <ClCompile Include="JosephDataGenerator.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
