--- a/ChessboardCoverageProblem/ChessboardCoverageProblem.vcxproj
+++ b/ChessboardCoverageProblem/ChessboardCoverageProblem.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{8CA25E4C-36C2-4ECC-B8F7-C1DE61079649}</ProjectGuid>
-    <RootNamespace>SplayTreeDataGenerator</RootNamespace>
+    <ProjectGuid>{99F34ACC-B721-477B-B9E4-5DFD3CD0CF21}</ProjectGuid>
+    <RootNamespace>ChessboardCoverageProblem</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -115,10 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SplayTreeDataGenerator.cpp" />
+    <ClCompile Include="ChessboardCoverageProblem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="data.txt" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
