--- a/KnapsackProblem/KnapsackProblem.vcxproj
+++ b/KnapsackProblem/KnapsackProblem.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{8CA25E4C-36C2-4ECC-B8F7-C1DE61079649}</ProjectGuid>
-    <RootNamespace>SplayTreeDataGenerator</RootNamespace>
+    <ProjectGuid>{F3CA976C-1D0D-4ED4-80D0-E3F1BD54CD18}</ProjectGuid>
+    <RootNamespace>KnapsackProblem</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -115,10 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SplayTreeDataGenerator.cpp" />
+    <ClCompile Include="KnapsackProblem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="data.txt" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
