--- a/MonkeyKing/MonkeyKing.vcxproj
+++ b/MonkeyKing/MonkeyKing.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{1842303F-6A01-4675-91D6-D634124F08EC}</ProjectGuid>
     <RootNamespace>MonkeyKing</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>MonkeyKingProblem</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,7 +117,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MonkeyKing.cpp" />
+    <ClCompile Include="MonkeyKingProblem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
