--- a/Relative/Relative.vcxproj
+++ b/Relative/Relative.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{837CEBED-5631-499C-9607-856F1E7AAC68}</ProjectGuid>
     <RootNamespace>Relative</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>RelativeProblem</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,7 +117,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Relative.cpp" />
+    <ClCompile Include="RelativeProblem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
