--- a/RelativeDataGenerator/RelativeDataGenerator.vcxproj
+++ b/RelativeDataGenerator/RelativeDataGenerator.vcxproj
@@ -117,6 +117,9 @@
   <ItemGroup>
     <ClCompile Include="RelativeDataGenerator.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
