--- a/ReversePairs/ReversePairs.vcxproj
+++ b/ReversePairs/ReversePairs.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{BB7CCE92-149C-4222-A2D3-1FD86675C760}</ProjectGuid>
     <RootNamespace>ReversePairs</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>ReversePairsProblem</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,7 +117,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ReversePairs.cpp" />
+    <ClCompile Include="ReversePairsProblem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
