--- a/SplayTree/SplayTree.vcxproj
+++ b/SplayTree/SplayTree.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{3BD80520-CBE9-4CF2-9605-6EEF610A5BCE}</ProjectGuid>
     <RootNamespace>SplayTree</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>SplayTreeProblem</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,7 +117,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SplayTree.cpp" />
+    <ClCompile Include="SplayTreeProblem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
