创建 io 分支，存放 “以文件形式输入输出” 版本的代码

--- a/JosephProblem/JosephProblem.vcxproj.filters
+++ b/JosephProblem/JosephProblem.vcxproj.filters
@@ -23,5 +23,8 @@
     <Text Include="data.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="file.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
