--- a/RelativeProblem/RelativeProblem.vcxproj.filters
+++ b/RelativeProblem/RelativeProblem.vcxproj.filters
@@ -18,6 +18,9 @@
     <Text Include="data.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="file.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RelativeProblem.cpp">
