--- a/SplayTreeProblem/SplayTreeProblem.vcxproj.filters
+++ b/SplayTreeProblem/SplayTreeProblem.vcxproj.filters
@@ -18,6 +18,7 @@
     <Text Include="data.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="out.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SplayTreeProblem.cpp">
