--- a/DefenseOfTheRobotsProblem/DefenseOfTheRobotsProblem.vcxproj.filters
+++ b/DefenseOfTheRobotsProblem/DefenseOfTheRobotsProblem.vcxproj.filters
@@ -18,6 +18,9 @@
     <Text Include="data.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="out.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DefenseOfTheRobotsProblem.cpp">
