--- a/JosephProblem/JosephProblem.vcxproj.filters
+++ b/JosephProblem/JosephProblem.vcxproj.filters
@@ -23,5 +23,8 @@
     <Text Include="data.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="out.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
